--- a/apps/taller/templates/base/header.html
+++ b/apps/taller/templates/base/header.html
@@ -16,7 +16,7 @@
 
 					<ul class="navbar-nav mr-auto">
 						<li class="nav-item active">
-							<a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+							<a class="nav-link" href="{% url 'index' %}">Inicio <span class="sr-only">(current)</span></a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#">Instalaciones</a>
@@ -32,10 +32,6 @@
 					<form class="form-inline my-2 my-lg-0">
 						<input class="form-control mr-sm-2" type="text" placeholder="Search">
 						<button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-					</form>
-					<form class="form-inline my-2 my-lg-0">
-						<a href="" class="btn btn-success">Login</a>
-						<a href="#" class="btn btn-success">Sing Up</a>
 					</form>
 				</div>
 
