--- a/apps/taller/templates/base/header.html
+++ b/apps/taller/templates/base/header.html
@@ -2,7 +2,7 @@
 
 <div class="wrap">
 
-	<nav class="navbar navbar-expand-lg navbar-primary bg-primary w-100 fixed-top" id="nav-p">
+	<nav class="navbar navbar-expand-lg navbar-primary bg-primary w-100 fixed-top nav-main" id="nav-p">
 
 		<a class="navbar-brand px-1" href="{% url 'index' %}">
 			<img src="{% static 'img/logo.png' %}" alt="Taller Logo" class="logo">
@@ -31,11 +31,15 @@
 			</ul>
 					
 			<form class="form-inline my-2 my-lg-0">
-				{% if status != True %}
-					<a href="{% url 'registro_cliente' %}" class="btn btn-info">Registrate&nbsp;&nbsp;&nbsp;<i class="fas fa-user-plus"></i></a>&nbsp;&nbsp;&nbsp;
+
+				{% if not request.user.is_authenticated %}
+					<a href="#" class="btn btn-info" data-toggle="modal" data-target="#exampleModal">Registrate&nbsp;&nbsp;&nbsp;<i class="fas fa-user-plus"></i></a>&nbsp;&nbsp;&nbsp;
 					<a href="#" id="login-btn" onclick="openNav()" class="btn btn-success">Ingresa&nbsp;&nbsp;&nbsp;<i class="fas fa-sign-in-alt"></i></a>
 				{% else %}
-					<a href="" class="btn btn-success">{{first_name}}&nbsp;&nbsp;&nbsp;<i class="fas fa-user"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
+					
+					
+
+					<a href="" class="btn btn-success">{{request.user.first_name}}&nbsp;&nbsp;&nbsp;<i class="fas fa-user"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
 					<a href="{% url 'logout' %}" class="btn btn-danger">Salir&nbsp;&nbsp;&nbsp;<i class="fas fa-running"></i></a>
 				{% endif %}
 			</form>
