--- a/apps/taller/templates/index.html
+++ b/apps/taller/templates/index.html
@@ -12,14 +12,14 @@
 
 			<div class="carousel-caption d-none d-md-block carousel-message">
 
-				{% if rol == 0 %} 		<!-- Vista para Admin -->
-					<h3>{{first_name}}&nbsp;{{last_name}}</h3>
+				{% if request.user.rol == 0 %} 		<!-- Vista para Admin -->
+					<h3>{{request.user.first_name}}&nbsp;{{request.user.last_name}}</h3>
 					<p class="float-right p-carousel">&#8212;&nbsp;Administrador</p>
-				{% elif rol == 1 %} 	<!-- Vista para Técnico -->
-					<h3>{{first_name}}&nbsp;{{last_name}}</h3>
+				{% elif request.user.rol == 1 %} 	<!-- Vista para Técnico -->
+					<h3>{{request.user.first_name}}&nbsp;{{request.user.last_name}}</h3>
 					<p class="float-right p-carousel">&#8212;&nbsp;T&eacute;cnico</p>
-				{% elif rol == 2 %} 	<!-- Vista para Cliente -->
-					<h3>{{first_name}}&nbsp;{{last_name}}</h3>
+				{% elif request.user.rol == 2 %} 	<!-- Vista para Cliente -->
+					<h3>{{request.user.first_name}}&nbsp;{{request.user.last_name}}</h3>
 					<p class="float-right p-carousel">&#8212;&nbsp;Cliente</p>
 				{% else %} 				<!-- Vista para Visitante -->
 					<h2>Taller Ort&iacute;z</h2>
@@ -48,19 +48,41 @@
 
 {% block main_container %}
 	
-	{% if rol == 0 %} 		<!-- Vista para Admin -->
-	{% elif rol == 1 %} 	<!-- Vista para Técnico -->
-
-	{% elif rol == 2 %} 	<!-- Vista para Cliente -->
+	{% if request.user.rol == 0 %} 		<!-- Vista para Admin -->
+		{% include 'index_admin.html' %}
+	{% elif request.user.rol == 1 %} 	<!-- Vista para Técnico -->
+		{% include 'index_tecnico.html' %}
+	{% elif request.user.rol == 2 %} 	<!-- Vista para Cliente -->
 		
 		{% include 'index_cliente.html' %}
 
 	{% else %} 				<!-- Vista para Visitante -->
 
-	<div id="mySidenav" class="sidenav">
+	<div id="mySidenav" class="sidenav text-center">
 		<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 		{% include 'users/login.html' %}
+		<p>¿A&uacute;n no ten&eacute;s cuenta? ¡Registrate!</p>
+		<a href="#" class="btn btn-info" data-toggle="modal" data-target="#exampleModal">Registrate&nbsp;&nbsp;&nbsp;<i class="fas fa-user-plus"></i></a>
 	</div>
+
+	<!-- Modal -->
+	<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="exampleModalLabel">Registro de Cliente</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					{% include 'users/registro_cliente.html' %}
+				</div>
+			</div>
+		</div>
+	</div>
+
+
 
 	{% endif %}
 
