--- a/apps/users/templates/users/registro_cliente.html
+++ b/apps/users/templates/users/registro_cliente.html
@@ -1,74 +1,59 @@
-{% extends 'base/base.html' %}
+<form method="POST" action="{% url 'almacenar_cliente' %}" class="post-form">
 
-{% block main_container %}
+	<fieldset>
+		<p>Registrate en nuestro taller y ten acceso a solicitar citas y a otras promociones. <br> Tu información nunca será compartida.</p>
+		<div class="form-group row">
+			<label for="nombre" class="col-sm-2 col-form-label">Nombre</label>
+			<div class="col-sm-10">
+				<input type="text" class="form-control" id="nombre" name="nombre" placeholder="">					
+			</div>
+		</div>
+		<div class="form-group row">
+			<label for="apellido" class="col-sm-2 col-form-label">Apellido</label>
+			<div class="col-sm-10">
+				<input type="text" class="form-control" id="apellido" name="apellido" placeholder="">					
+			</div>
+		</div>
+		<div class="form-group row">
+			<label for="usuario" class="col-sm-2 col-form-label">Usuario</label>
+			<div class="col-sm-10">
+				<input type="text" class="form-control" id="usuario" name="usuario" placeholder="">					
+			</div>
+		</div>
+		<div class="form-group row">
+			<label for="correo" class="col-sm-2 col-form-label">Correo</label>
+			<div class="col-sm-10">
+				<input type="text" class="form-control" id="correo" name="correo" placeholder="email@example.com">				
+			</div>
+		</div>			
+		<div class="form-group row">
+			<label for="password" class="col-sm-2 col-form-label">Contraseña</label>
+			<div class="col-sm-10">
+				<input type="password" class="form-control" id="password" name="password" placeholder="">					
+			</div>
+		</div>
+		<div class="form-group row align-items-center">
+			<label for="password-2" class="col-sm-2 col-form-label">Confirmar Contraseña</label>
+			<div class="col-sm-10">
+				<input type="password" class="form-control" id="password-2" name="password-2" placeholder="">					
+			</div>
+		</div>
+		<div class="form-group row">
+			<label for="telefono" class="col-sm-2 col-form-label">Telefono</label>
+			<div class="col-sm-10">
+				<input type="text" class="form-control" id="telefono" name="telefono" placeholder="">					
+			</div>
+		</div>
+		<div class="form-group row">
+			<label for="direccion" class="col-sm-2 col-form-label">Dirección</label>
+			<div class="col-sm-10">
+				<input type="text" class="form-control" id="direccion" name="direccion" placeholder="">					
+			</div>
+		</div>
+		<div class="form-group row justify-content-md-center">
+			{% csrf_token %}
+			<button type="submit" class="btn btn-primary col-sm-4 col-form-label">Registrarse</button>
+		</div>		    
+	</fieldset>
 
-	<div class="col-8"></div>
-
-	<div class="col-4 border-left">
-
-		<form method="POST" action="{% url 'almacenar_cliente' %}" class="post-form px-2 py-2 my-3 mx-2 w-100">
-
-			
-
-			<fieldset>
-				<legend class="mb-4">Registro de Cliente</legend>
-				<p>Registrate en nuestro taller y ten acceso a solicitar citas y a otras promociones. <br> Tu información nunca será compartida.</p>
-				<div class="form-group row">
-					<label for="nombre" class="col-sm-2 col-form-label">Nombre</label>
-					<div class="col-sm-10">
-						<input type="text" class="form-control" id="nombre" name="nombre" placeholder="">					
-					</div>
-				</div>
-				<div class="form-group row">
-					<label for="apellido" class="col-sm-2 col-form-label">Apellido</label>
-					<div class="col-sm-10">
-						<input type="text" class="form-control" id="apellido" name="apellido" placeholder="">					
-					</div>
-				</div>
-				<div class="form-group row">
-					<label for="usuario" class="col-sm-2 col-form-label">Usuario</label>
-					<div class="col-sm-10">
-						<input type="text" class="form-control" id="usuario" name="usuario" placeholder="">					
-					</div>
-				</div>
-				<div class="form-group row">
-					<label for="correo" class="col-sm-2 col-form-label">Correo</label>
-					<div class="col-sm-10">
-						<input type="text" class="form-control" id="correo" name="correo" placeholder="email@example.com">				
-					</div>
-				</div>			
-				<div class="form-group row">
-					<label for="password" class="col-sm-2 col-form-label">Contraseña</label>
-					<div class="col-sm-10">
-						<input type="password" class="form-control" id="password" name="password" placeholder="">					
-					</div>
-				</div>
-				<div class="form-group row align-items-center">
-					<label for="password-2" class="col-sm-2 col-form-label">Confirmar Contraseña</label>
-					<div class="col-sm-10">
-						<input type="password" class="form-control" id="password-2" name="password-2" placeholder="">					
-					</div>
-				</div>
-				<div class="form-group row">
-					<label for="telefono" class="col-sm-2 col-form-label">Telefono</label>
-					<div class="col-sm-10">
-						<input type="text" class="form-control" id="telefono" name="telefono" placeholder="">					
-					</div>
-				</div>
-				<div class="form-group row">
-					<label for="direccion" class="col-sm-2 col-form-label">Dirección</label>
-					<div class="col-sm-10">
-						<input type="text" class="form-control" id="direccion" name="direccion" placeholder="">					
-					</div>
-				</div>
-				<div class="form-group row justify-content-md-center">
-					{% csrf_token %}
-					<button type="submit" class="btn btn-primary col-sm-4 col-form-label">Registrarse</button>
-				</div>		    
-			</fieldset>
-
-		</form>
-
-	</div>
-
-{% endblock %}
+</form>
