--- a/apps/taller/templates/base/header.html
+++ b/apps/taller/templates/base/header.html
@@ -1,8 +1,8 @@
 {% load static %}
 
-<div class="wrap">
+<div class="wrap header-wrap">
 
-	<nav class="navbar navbar-expand-lg navbar-primary bg-primary w-100 fixed-top nav-main" id="nav-p">
+	<nav class="navbar navbar-expand-lg navbar-primary bg-primary w-100 fixed-top" id="nav-p">
 
 		<a class="navbar-brand px-1" href="{% url 'index' %}">
 			<img src="{% static 'img/logo.png' %}" alt="Taller Logo" class="logo">
