--- a/apps/taller/templates/index_cliente.html
+++ b/apps/taller/templates/index_cliente.html
@@ -4,7 +4,7 @@
 
 	<div class="row mt-4 justify-content-md-between">
 
-		<a href="" class="card-link">
+		<a href="{% url 'vehiculos' %}" class="card-link">
 			<div class="card-index border-success col-sm-4">
 				<div class="card-body">
 					<h4 class="card-title">Ver Veh&iacute;culos</h4>
@@ -39,6 +39,10 @@
 				</div>
 			</div>
 		</a>
+
+		<div class="mt-5"> 
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores minus expedita distinctio vitae, laboriosam quisquam deserunt voluptate beatae dolore id vel, optio veniam harum quos at labore molestiae deleniti sapiente eligendi? Eos veritatis nulla nemo iure consectetur eaque odit voluptatibus animi voluptates libero minus autem quis ipsam maiores pariatur nam, cupiditate cumque illo? Corporis deleniti in odit itaque porro repellendus beatae a est. Aliquam commodi magnam repellat provident, ea eligendi deleniti, molestiae reiciendis vero alias vitae, similique hic nam reprehenderit nisi necessitatibus assumenda magni asperiores. Totam odio ipsa maxime quae accusantium, vitae, minima ipsam omnis quas numquam aliquam. Facere, officiis, autem. Sunt vel rem, atque reprehenderit doloribus ut voluptatibus corporis quasi libero omnis esse provident, facere quo ab iusto repellendus in? Reiciendis veritatis autem laborum unde obcaecati saepe repudiandae. Sunt qui consequatur praesentium iure, quaerat, deserunt hic eum sapiente debitis. Totam iusto consectetur facilis corporis, sunt tempore ea delectus quasi omnis eius necessitatibus enim nisi dolore. Doloribus assumenda dignissimos vero, quo quidem quaerat nobis facere aliquid non at eum in, blanditiis pariatur odit, veniam natus. Nihil similique iste voluptatibus minima, veniam nemo culpa voluptatum autem commodi molestias mollitia asperiores delectus ut eius. Corrupti facilis eveniet nemo. Nobis mollitia, autem sapiente nihil excepturi nemo ab dignissimos, at, provident sunt nesciunt harum repellendus esse molestiae et cupiditate obcaecati veniam facere. Harum est eaque, quia quisquam expedita! Amet accusantium deleniti corporis eum, temporibus, ratione aliquid nemo id nam rem, blanditiis distinctio omnis dolore voluptates nisi nihil! Corporis modi voluptates voluptatum, molestias distinctio iste maxime minus! Itaque eligendi obcaecati dignissimos accusamus. Laboriosam impedit eos fugit? Cum consectetur quidem sapiente doloremque laudantium eos soluta vel qui, quia repudiandae itaque, tempora numquam suscipit mollitia facilis recusandae culpa iste. Necessitatibus, architecto magni illum unde ipsam possimus ipsa, soluta modi ipsum suscipit cupiditate eius excepturi vero dolores culpa! </p>
+		</div>
 
 	</div>
 
