--- a/apps/taller/templates/administrar_visita.html
+++ b/apps/taller/templates/administrar_visita.html
@@ -1,30 +1,14 @@
+{% extends 'base/base.html' %}
+
 <div class="col-md-11 m-2 py-3 px-4">
 
-	<h3>¿Que deseas hacer hoy?</h3>
-
-<!-- Modal -->
-<div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-	aria-hidden="true">
-	<div class="modal-dialog modal-lg" role="document">
-		<div class="modal-content">
-			<div class="modal-header">
-				<h5 class="modal-title" id="exampleModalLabel">Registrar nueva visita</h5>
-				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-					<span aria-hidden="true">&times;</span>
-				</button>
-			</div>
-			<div class="modal-body">
-				{% include 'nueva_visita.html' %}
-			</div>
-		</div>
-	</div>
-</div>
+	<h3>Estras en el index de nueva visita</h3>
 
 	<div class="row mt-4 justify-content-md-center">
 
-		<a href="" class="card-link" data-toggle="modal" data-target="#exampleModal2" >
+		<a href="" class="card-link">
 			<div class="card-index border-success col-sm-4">
-				<div class="card-body" >
+				<div class="card-body">
 					<h4 class="card-title">Nueva Visita</h4>
 					<div class="row">
 						<p class="card-text col-sm-10 text-justify">Registre una nueva visita por parte de un cliente a su taller.</p>
