permite ingresar slots

--- a/apps/taller/templates/index_admin.html
+++ b/apps/taller/templates/index_admin.html
@@ -39,11 +39,9 @@
 				</div>
 			</div>
 		</a>
-
 	</div>
 
 	<div class="row mt-4 justify-content-md-between">
-
 		<a href="" class="card-link">
 			<div class="card-index border-success col-sm-4">
 				<div class="card-body">
@@ -55,7 +53,16 @@
 				</div>
 			</div>
 		</a>
-
+		<a href="{% url 'gestionar_slots' %}" class="card-link">
+			<div class="card-index border-success col-sm-4">
+				<div class="card-body">
+					<h4 class="card-title">Gesti&oacute;n de slots</h4>
+					<div class="row">
+						<p class="card-text col-sm-10 text-justify">Gestione los slots bla bla bla bla bla.</p>
+						<i class="fas fa-toolbox fa-3x"></i>
+					</div>
+				</div>
+			</div>
+		</a>
 	</div>
-
 </div>
