--- a/apps/taller/templates/gestionar_slots.html
+++ b/apps/taller/templates/gestionar_slots.html
@@ -1,15 +1,11 @@
 {% extends 'base/base.html' %}
-
-
-{% block title %}Servicios{% endblock %}
-
-
-
-
+{% load static %}
 {% block main_container %}
+	<div class="col-md-11 py-3 px-4 main-container">
 
+		<h4>Slots</h4>
 
-
+		<p class="lead">Estos son los slots con los que cuenta la empresa.</p>	
 
 <div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
 	aria-hidden="true">
@@ -28,33 +24,202 @@
 	</div>
 </div>
 
+		<div class="row text-center">
+			<div class="col-md-10"></div>
+			<button class="btn btn-info col-md-2" data-toggle="modal" data-target="#exampleModal2">Agregar Slot<i class="fas fa-plus-circle"></i></button>
+		</div>
+		
+		<div class="row mt-4 justify-content-md-center">
+			<table class="table table-hover col-12">
+				<thead>
+					<tr class="d-flex bg-primary text-white text-center">
+						<th class="col-2">N°</th>
+						<th class="col-2">Disponible</th>
+						<th class="col-2">Reservacion</th>
+						<th class="col-3">Opciones</th>
+					</tr>
+				</thead>
+				<tbody>
+					{% for slot in slots %}
+						<tr class="d-flex text-center">
+							<td class="col-1 font-weight-bold">{{ forloop.counter }}</td>
+							<td class="col-2 font-weight-bold">{{slot.disponible}}</td>
+							<td class="col-2">{{slot.reservacion}}</td>
+							<td class="col-3">
+								<button class="btn btn-info" title="Ver detalles del Veh&iacute;culo">Ver&nbsp;&nbsp;<i class="fas fa-info-circle"></i></button>
 
-	<div class="row mt-4 justify-content-md-between">
+								<button class="btn btn-success" title="Editar Información del Veh&iacute;culo" data-toggle="modal" data-target="#editar-vehiculo-modal" data-id="{{vehiculo.id}}" data-placa="{{vehiculo.placa}}" data-tipo="{{vehiculo.tipo}}" data-marca="{{vehiculo.marca}}" data-modelo="{{vehiculo.modelo}}" data-anio="{{vehiculo.anio}}">Editar&nbsp;&nbsp;<i class="fas fa-pen"></i></button>
 
-		<a href="" class="card-link" data-toggle="modal" data-target="#exampleModal2">
-			<div class="card-index border-success col-sm-4">
-				<div class="card-body">
-					<h4 class="card-title">Nuevo slot</h4>
-					<div class="row">
-						<p class="card-text col-sm-10 text-justify">Registre un unevo slot para el taller.</p>
-						<i class="fas fa-concierge-bell fa-3x"></i>
-					</div>
-				</div>
-			</div>
-		</a>
+								<button class="btn btn-danger" title="Eliminar el Veh&iacute;culo" data-toggle="modal" data-target="#eliminar-vehiculo-modal" data-id="{{vehiculo.id}}" data-placa="{{vehiculo.placa}}">Eliminar&nbsp;&nbsp;<i class="far fa-trash-alt"></i></button>
+							</td>
+						</tr>
+					{% empty %}
+						<tr>
+							<td colspan="6">
+								<h4>Aun no se registran slots.</h4>								
+							</td>
+						</tr>
+					{% endfor %}
+				</tbody>
+			</table> 
 
-		<a href="" class="card-link">
-			<div class="card-index border-success col-sm-4">
-				<div class="card-body">
-					<h4 class="card-title">Eliminar/Editar slot</h4>
-					<div class="row">
-						<p class="card-text col-sm-10 text-justify">Eliminar o editar los slots.</p>
-						<i class="fas fa-toolbox fa-3x"></i>
-					</div>
-				</div>
-			</div>
-		</a>
+		</div>
 	</div>
 
+	<!-- Modal Agregar Vehiculo -->
+	<div class="modal fade" id="agregar-vehiculo-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<form action="{% url 'agregar_vehiculo' %}" method="POST">
+					<div class="modal-header">
+						<h5 class="modal-title" id="exampleModalLabel">Agregar nuevo Veh&iacute;culo.</h5>
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+					</div>
+					<div class="modal-body">
+						{% csrf_token %}
+						<div class="form-group row">
+							<label for="placa" class="col-sm-2 col-form-label">Placa</label>
+							<div class="col-sm-10">
+								<input type="text" class="form-control" id="placa" name="placa" placeholder="">
+							</div>
+						</div>
+						<div class="form-group row">
+							<label for="tipo" class="col-sm-2 col-form-label">Tipo</label>
+							<div class="col-sm-10">
+								<input type="text" class="form-control" id="tipo" name="tipo" placeholder="">
+							</div>
+						</div>
+						<div class="form-group row">
+							<label for="marca" class="col-sm-2 col-form-label">Marca</label>
+							<div class="col-sm-10">
+								<input type="text" class="form-control" id="marca" name="marca" placeholder="">
+							</div>
+						</div>
+						<div class="form-group row">
+							<label for="modelo" class="col-sm-2 col-form-label">Modelo</label>
+							<div class="col-sm-10">
+								<input type="text" class="form-control" id="modelo" name="modelo" placeholder="">
+							</div>
+						</div>
+						<div class="form-group row">
+							<label for="anio" class="col-sm-2 col-form-label">Año</label>
+							<div class="col-sm-10">
+								<input type="text" class="form-control" id="anio" name="anio" placeholder="">
+							</div>
+						</div>
+						
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+						<input type="submit" class="btn btn-success" value="Guardar">
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
+
+	<!-- Modal Editar Vehiculo -->
+	<div class="modal fade" id="editar-vehiculo-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<form action="{% url 'editar_vehiculo' %}" method="POST">
+					<div class="modal-header">
+						<h5 class="modal-title" id="exampleModalLabel">Editar Veh&iacute;culo.</h5>
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+					</div>
+					<div class="modal-body">
+						{% csrf_token %}
+						<div class="form-group row d-none">
+							<label for="id-edit" class="col-sm-2 col-form-label">ID de Veh&iacute;culo</label>
+							<div class="col-sm-10">
+								<input type="text" class="form-control" id="id-edit" name="id_edit" placeholder="">
+							</div>
+						</div>
+						<div class="form-group row">
+							<label for="placa-edit" class="col-sm-2 col-form-label">Placa</label>
+							<div class="col-sm-10">
+								<input type="text" class="form-control" id="placa-edit" name="placa_edit" placeholder="">
+							</div>
+						</div>
+						<div class="form-group row">
+							<label for="tipo-edit" class="col-sm-2 col-form-label">Tipo</label>
+							<div class="col-sm-10">
+								<input type="text" class="form-control" id="tipo-edit" name="tipo_edit" placeholder="">
+							</div>
+						</div>
+						<div class="form-group row">
+							<label for="marca-edit" class="col-sm-2 col-form-label">Marca</label>
+							<div class="col-sm-10">
+								<input type="text" class="form-control" id="marca-edit" name="marca_edit" placeholder="">
+							</div>
+						</div>
+						<div class="form-group row">
+							<label for="modelo-edit" class="col-sm-2 col-form-label">Modelo</label>
+							<div class="col-sm-10">
+								<input type="text" class="form-control" id="modelo-edit" name="modelo_edit" placeholder="">
+							</div>
+						</div>
+						<div class="form-group row">
+							<label for="anio-edit" class="col-sm-2 col-form-label">Año</label>
+							<div class="col-sm-10">
+								<input type="text" class="form-control" id="anio-edit" name="anio_edit" placeholder="">
+							</div>
+						</div>
+						
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+						<input type="submit" class="btn btn-success" value="Editar">
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
+
+	<!-- Modal Eliminar Vehiculo -->
+	<div class="modal fade" id="eliminar-vehiculo-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<form action="{% url 'eliminar_vehiculo' %}" method="POST">
+					<div class="modal-header">
+						<h5 class="modal-title" id="exampleModalLabel">Eliminar Veh&iacute;culo.</h5>
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+					</div>
+					<div class="modal-body">
+						{% csrf_token %}
+						<div class="form-group row d-none">
+							<label for="id-delete" class="col-sm-2 col-form-label">ID de Veh&iacute;culo</label>
+							<div class="col-sm-10">
+								<input type="text" class="form-control" id="id-delete" name="id_delete" placeholder="">
+							</div>
+						</div>
+						<div class="form-group row justify-content-md-center">
+							<h4>¿Estás seguro que quieres eliminar el veh&iacute;culo?</h4>
+							<label for="placa-delete" class="col-sm-2 col-form-label">Placa</label>
+							<div class="col-sm-3">
+								<input type="text" readonly="" class="form-control-plaintext" id="placa-delete" name="placa_delete" placeholder="">
+							</div>
+						</div>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+						<input type="submit" class="btn btn-danger" value="Eliminar">
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
 
 {% endblock %}
+
+{% block extra_js %}
+	<script src="{% static 'js/vehiculos/vehiculos.js' %}"></script>
+{% endblock %}
+
+
