--- a/apps/taller/templates/nueva_visita.html
+++ b/apps/taller/templates/nueva_visita.html
@@ -5,37 +5,37 @@
 		<div class="form-group row">
 			<label for="vehiculo" class="col-sm-2 col-form-label">vehiculo</label>
 			<div class="col-sm-10">
-				<input type="number" class="form-control" id="vehiculo" name="vehiculo" placeholder="">					
+				<input type="text" class="form-control" id="vehiculo" name="id_vehiculo_visita" placeholder="">					
 			</div>
 		</div>
 		<div class="form-group row">
 			<label for="tecnico" class="col-sm-2 col-form-label">tecnico</label>
 			<div class="col-sm-10">
-				<input type="number" class="form-control" id="tecnico" name="tecnico" placeholder="">					
+				<input type="text" class="form-control" id="tecnico" name="id_tecnico_visita" placeholder="">					
 			</div>
 		</div>
 		<div class="form-group row">
 			<label for="slot" class="col-sm-2 col-form-label">slot</label>
 			<div class="col-sm-10">
-				<input type="number" class="form-control" id="slot" name="slot" placeholder="">					
+				<input type="text" class="form-control" id="slot" name="id_slot_visita" placeholder="">					
 			</div>
 		</div>
 		<div class="form-group row">
 			<label for="fecha" class="col-sm-2 col-form-label">fecha</label>
 			<div class="col-sm-10">
-				<input type="datatime" class="form-control" id="fecha" name="fecha" placeholder="mm/dd/aa">				
+				<input type="datetime" class="form-control" id="fecha" name="fecha_visita" placeholder="mm/dd/aa">				
 			</div>
 		</div>			
 		<div class="form-group row">
 			<label for="caracter" class="col-sm-2 col-form-label">caracter</label>
 			<div class="col-sm-10">
-				<input type="text" class="form-control" id="caracter" name="caracter" placeholder="">					
+				<input type="text" class="form-control" id="caracter" name="caracter_visita" placeholder="">					
 			</div>
 		</div>
 		<div class="form-group row align-items-center">
 			<label for="comentarios" class="col-sm-2 col-form-label">comentarios</label>
 			<div class="col-sm-10">
-				<input type="text" class="form-control" id="comentarios" name="comentarios" placeholder="">					
+				<input type="text" class="form-control" id="comentarios" name="comentarios_visita" placeholder="">					
 			</div>
 		</div>	   
 
