--- a/apps/taller/templates/nuevo_slot.html
+++ b/apps/taller/templates/nuevo_slot.html
@@ -1,7 +1,7 @@
 <form method="POST" action="{% url 'almacenar_slots' %}" class="post-form">
 
 	<fieldset>
-		<p>Ingrese una nueva visita</p>
+		<p>Ingrese un nuevo slot</p>
 
 		<div class="form-group row">
 			<label for="tecnico" class="col-sm-2 col-form-label">Disponible</label>
@@ -22,12 +22,6 @@
 				</select>				
 			</div>
 		</div>
-
-
-
-
-
-
 
 		<div class="form-group row justify-content-md-center">
 			{% csrf_token %}
