Ya muestra los slots, pero solo muestra 0 y 1, false=0, y true=1

--- a/apps/taller/templates/vehiculo/gestionar_slots.html
+++ b/apps/taller/templates/vehiculo/gestionar_slots.html
@@ -56,7 +56,7 @@
 					{% empty %}
 						<tr>
 							<td colspan="6">
-								<h4>Aun no registras slots.</h4>								
+								<h4>Aun no registras veh&iacute;culos.</h4>								
 							</td>
 						</tr>
 					{% endfor %}
