--- a/apps/taller/templates/index_admin.html
+++ b/apps/taller/templates/index_admin.html
@@ -2,9 +2,26 @@
 
 	<h3>¿Que deseas hacer hoy?</h3>
 
+	<div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+	aria-hidden="true">
+	<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title" id="exampleModalLabel">Registrar nueva visita</h5>
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+			<div class="modal-body">
+				{% include 'nueva_visita.html' %}
+			</div>
+		</div>
+	</div>
+</div>
+
 	<div class="row mt-4 justify-content-md-between">
 
-		<a href="" class="card-link">
+		<a href="" class="card-link" data-toggle="modal" data-target="#exampleModal2">
 			<div class="card-index border-success col-sm-4">
 				<div class="card-body">
 					<h4 class="card-title">Nueva Visita</h4>
