ya sale la tabla de slots, y ya ingresa slots y visitas tanto en tecnico como en admin y muestra bien los datos en la tabla de visita

--- a/apps/taller/templates/index_admin.html
+++ b/apps/taller/templates/index_admin.html
@@ -33,7 +33,7 @@
 			</div>
 		</a>
 
-		<a href="" class="card-link">
+		<a href="gestionar_visitas" class="card-link">
 			<div class="card-index border-success col-sm-4">
 				<div class="card-body">
 					<h4 class="card-title">Gestion de Visitas</h4>
