--- a/apps/taller/static/css/estilo.css
+++ b/apps/taller/static/css/estilo.css
@@ -13,6 +13,15 @@ html,body{
   box-sizing: border-box;
 }
 
+.scroll{
+        border:1px solid;
+        height:500px;
+        width:1250px;
+        overflow-y:scroll;
+        overflow-x:hidden;
+   }
+
+
 .logo{
 	width: 80px;
 	height: 50px;
