--- a/apps/taller/templates/nueva_visita.html
+++ b/apps/taller/templates/nueva_visita.html
@@ -14,12 +14,47 @@
 				<input type="text" class="form-control" id="tecnico" name="id_tecnico_visita" placeholder="">					
 			</div>
 		</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 		<div class="form-group row">
-			<label for="slot" class="col-sm-2 col-form-label">slot</label>
-			<div class="col-sm-10">
-				<input type="text" class="form-control" id="slot" name="id_slot_visita" placeholder="">					
+			<label for="especializacion" class="col-sm-3 col-form-label">Slot comb</label>
+			<div class="col-sm-9">
+
+	
+				<select class="form-control" id="slot" name="id_slot_visita">
+				{% for slot in slots %}
+				{% if slot.disponible == True %}
+					<option id="slotopcion" name="id_slot_visita_opcion">{{ slot.id }}</option>
+				{% endif %}
+				{% endfor %}
+				</select>
+		
+
+
 			</div>
 		</div>
+
+
+
+
+
+
+
+
+
 		<div class="form-group row">
 			<label for="fecha" class="col-sm-2 col-form-label">fecha</label>
 			<div class="col-sm-10">
@@ -37,7 +72,7 @@
 			<div class="col-sm-10">
 				<input type="text" class="form-control" id="comentarios" name="comentarios_visita" placeholder="">					
 			</div>
-		</div>	   
+		</div>	
 
 		<div class="form-group row justify-content-md-center">
 			{% csrf_token %}
